# verisimdb

./: .cfignore  .gitignore  0-AI-MANIFEST.a2ml  AI.a2ml  AI.djot  BEST-IN-CLASS-ROADMAP.md  CHANGELOG.adoc  CNAME  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.adoc  ECOSYSTEM.scm  IMPLEMENTATION-ROADMAP.adoc  KNOWN-ISSUES.adoc  Kraft cross-integration to VeriSim.csv  META.scm  PLANNER-IMPLEMENTATION-STATUS.md  README.adoc  RELEASE-NOTES-v0.1.0-alpha.md  ROADMAP.adoc  RSR_OUTLINE.adoc  Rescript Registry Types.md  SECURITY-NOTICE.md  SECURITY.md  SONNET-TASKS.md  STATE.scm  Snapshotting and Truncation Logic.md  TOPOLOGY.md  Technical Specification - KRaft Metadata Log.md  VOID-SETUP.md  WHITEPAPER.md  ZKP and Sanctify Integration.md  _headers  about.html  benchmark_results.txt  contact.html  deny.toml  docs.html  gallery.html  index.html  (+11 more)
.claude/: CLAUDE.md
.clusterfuzzlite/: project.yaml
.github/: CODEOWNERS  SUPPORT.md  dependabot.yml
.github/workflows/: cflite_batch.yml  cflite_pr.yml  jekyll-gh-pages.yml  jekyll.yml  mirror.yml  quality.yml  security-scan.yml
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
.verisimdb/: config.toml  index.json
.verisimdb/hexads/: commit-0087599f9fbd.json  commit-030287996c2c.json  commit-031ad82afba6.json  commit-04ce420ca876.json  (+127 more)
.well-known/: aibdp.json  change-password  security.txt  void.rdf
ai-cli-crash-capture/: recoverer-setup.sh
benches/: Cargo.toml  modality_benchmarks.rs
benches/src/: lib.rs
connectors/: README.adoc
connectors/clients/rust/: Cargo.toml
connectors/clients/rust/src/: client.rs  drift.rs  error.rs  federation.rs  hexad.rs  lib.rs  provenance.rs  search.rs  types.rs  vql.rs
container/: .gatekeeper.yaml  Containerfile  compose.toml  ct-build.sh  entrypoint.sh  manifest.toml
debugger/: Cargo.toml
docs/: VQL-SPEC.adoc  adoption-strategy.adoc  backwards-compatibility.adoc  cache-sharing-strategy.adoc  caching-strategy.adoc  challenges-federated.adoc  challenges-hybrid.adoc  challenges-standalone.adoc  consultation-dependent-types-zkp.adoc  consultation-normalization-strategy.adoc  deployment-modes.adoc  drift-handling.adoc  error-handling-strategy.adoc  federation-readiness.adoc  getting-started.adoc  minikanren-integration-v3.adoc  normalization-cascade.adoc  panll-module-audit.adoc  query-optimization-overview.adoc  rescript-registry-types.adoc  reversibility-design.adoc  safety-and-fault-tolerance.adoc  safety-theory-applied.adoc  security-lessons.lgt  snapshotting-and-truncation-logic.adoc  technical-specification-kraft-metadata-log.adoc  vql-architecture.adoc  vql-examples.adoc  vql-formal-semantics.adoc  vql-grammar.ebnf  vql-type-system.adoc  vql-vs-sql.adoc  vql-vs-vql-dt.adoc  zkp-and-sanctify-integration.adoc
elixir-orchestration/: .formatter.exs  mix.exs
examples/: load-sample-data.sh  smoke-test.sh
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_hexad_id.rs
playground/: build.mjs  package-lock.json  package.json  rescript.json
practice-mirror/: base-alpine.ctp  debian-bookworm-slim.ctp  discourse-compose.yaml  discourse-start.sh  discourse.ctp  dragonfly.ctp  mariadb-start.sh  mariadb.ctp  ols-start.sh  postgresql-start.sh  postgresql.ctp  svalinn-compose.yaml  verisimdb-connector.ctp  verisimdb.ctp  wordpress-litespeed-varnish.ctp
rust-core/fuzz/: Cargo.toml
rust-core/fuzz/fuzz_targets/: fuzz_vql_parser.rs
rust-core/verisim-api/: Cargo.toml  build.rs
rust-core/verisim-api/proto/: verisim.proto
rust-core/verisim-api/src/: auth.rs  federation.rs  graphql.rs  grpc.rs  lib.rs  main.rs  rbac.rs  transaction.rs  vql.rs
rust-core/verisim-api/src/proto/: verisim.rs
rust-core/verisim-document/: Cargo.toml
rust-core/verisim-document/src/: lib.rs
rust-core/verisim-document/tests/: property_tests.proptest-regressions  property_tests.rs
rust-core/verisim-drift/: Cargo.toml
rust-core/verisim-drift/src/: calculator.rs  lib.rs
rust-core/verisim-graph/: Cargo.toml
rust-core/verisim-graph/src/: lib.rs  oxigraph_backend.rs  redb_backend.rs
rust-core/verisim-hexad/: Cargo.toml
rust-core/verisim-hexad/src/: lib.rs  query_hexad.rs  store.rs  transaction.rs
rust-core/verisim-hexad/tests/: atomicity_tests.rs  integration_tests.rs
rust-core/verisim-nif/: Cargo.toml
rust-core/verisim-nif/src/: lib.rs
rust-core/verisim-normalizer/: Cargo.toml
rust-core/verisim-normalizer/src/: conflict.rs  lib.rs  regeneration.rs
rust-core/verisim-planner/: Cargo.toml
rust-core/verisim-planner/src/: config.rs  cost.rs  error.rs  explain.rs  lib.rs  optimizer.rs  plan.rs  prepared.rs  profiler.rs  slow_query.rs  stats.rs  vql_bridge.rs
rust-core/verisim-provenance/: Cargo.toml
rust-core/verisim-provenance/src/: lib.rs
rust-core/verisim-repl/: Cargo.toml
rust-core/verisim-repl/src/: client.rs  completer.rs  formatter.rs  highlighter.rs  linter.rs  main.rs  vql_fmt.rs
rust-core/verisim-semantic/: Cargo.toml
rust-core/verisim-semantic/src/: circuit_compiler.rs  circuit_registry.rs  lib.rs  proven_bridge.rs  sanctify_bridge.rs  verification_keys.rs  zkp.rs  zkp_bridge.rs
rust-core/verisim-spatial/: Cargo.toml
rust-core/verisim-spatial/src/: lib.rs
rust-core/verisim-storage/: Cargo.toml
rust-core/verisim-storage/src/: backend.rs  error.rs  lib.rs  memory.rs  metrics.rs  redb_backend.rs  typed.rs
rust-core/verisim-temporal/: Cargo.toml
rust-core/verisim-temporal/src/: diff.rs  lib.rs
rust-core/verisim-temporal/tests/: property_tests.rs
rust-core/verisim-tensor/: Cargo.toml
rust-core/verisim-tensor/src/: lib.rs
rust-core/verisim-vector/: Cargo.toml
rust-core/verisim-vector/src/: hnsw.rs  lib.rs
rust-core/verisim-wal/: Cargo.toml
rust-core/verisim-wal/src/: entry.rs  error.rs  lib.rs  reader.rs  segment.rs  writer.rs
scripts/: post-commit-hook.sh  self-ingest.sh  self-query.sh
tests/: integration_test.rs
v-api-gateway/: README.adoc
verisimdb-data/: 0-AI-MANIFEST.a2ml  INTEGRATION.md  README.adoc  SCAN-REPORT-2026-02-08.md  SESSION-SUMMARY.md  index.json
vql-bridge/: vql_parser_port.js
(+580 files in other folders)
