# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "verisimdb-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.verisim-api]
path = "../verisim-api"

[[bin]]
name = "fuzz_vql_parser"
path = "fuzz_targets/fuzz_vql_parser.rs"
test = false
doc = false
