# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "verisim-api"
description = "HTTP API server for VeriSimDB"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
verisim-hexad = { path = "../verisim-hexad" }
verisim-normalizer = { path = "../verisim-normalizer" }
verisim-drift = { path = "../verisim-drift" }
verisim-graph = { path = "../verisim-graph" }
verisim-vector = { path = "../verisim-vector" }
verisim-document = { path = "../verisim-document" }
verisim-tensor = { path = "../verisim-tensor" }
verisim-semantic = { path = "../verisim-semantic" }
verisim-temporal = { path = "../verisim-temporal" }

axum.workspace = true
tokio.workspace = true
tower.workspace = true
hyper.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
prometheus.workspace = true

[dev-dependencies]
proptest.workspace = true
