# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "verisim-api"
description = "HTTP API server for VeriSimDB"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
verisim-hexad = { path = "../verisim-hexad" }
verisim-normalizer = { path = "../verisim-normalizer" }
verisim-drift = { path = "../verisim-drift" }
verisim-graph = { path = "../verisim-graph" }
verisim-vector = { path = "../verisim-vector" }
verisim-document = { path = "../verisim-document" }
verisim-tensor = { path = "../verisim-tensor" }
verisim-semantic = { path = "../verisim-semantic" }
verisim-temporal = { path = "../verisim-temporal" }
verisim-provenance = { path = "../verisim-provenance" }
verisim-spatial = { path = "../verisim-spatial" }
verisim-planner = { path = "../verisim-planner" }

axum.workspace = true
tokio.workspace = true
tower.workspace = true
hyper.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
prometheus.workspace = true
reqwest.workspace = true
async-graphql.workspace = true
async-graphql-axum.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
prost-types.workspace = true
sha2.workspace = true
axum-server.workspace = true
rustls.workspace = true
hex = "0.4"

[features]
default = []
# Enable persistent storage backends (redb for graph, file-backed Tantivy for documents, WAL).
# Requires VERISIM_PERSISTENCE_DIR environment variable at runtime.
persistent = ["verisim-graph/redb-backend"]

# Build-dependencies removed: protobuf code is pre-generated at src/proto/verisim.rs.
# To regenerate after changing proto/verisim.proto, run:
#   protoc --prost_out=src/proto proto/verisim.proto
# Or use tonic-build manually.

[dev-dependencies]
proptest.workspace = true
