# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "verisim-document"
description = "Document modality - full-text search via Tantivy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tantivy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true

[dev-dependencies]
proptest.workspace = true
