# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "verisim-drift"
description = "Drift detection - monitors cross-modal consistency degradation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
prometheus.workspace = true

[dev-dependencies]
proptest.workspace = true
