# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "verisim-graph"
description = "Graph modality - RDF and property graph storage (pure Rust default, Oxigraph optional)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
# Enable the Oxigraph backend for full RDF/SPARQL support.
# Requires a C++ linker (oxigraph → oxrocksdb-sys transitive dependency).
oxigraph-backend = ["dep:oxigraph"]

[dependencies]
serde.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true

# Optional: Oxigraph for full RDF/SPARQL (pulls in C++ via oxrocksdb-sys)
oxigraph = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true
