# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "verisim-hexad"
description = "Hexad entity - one entity, six synchronized representations"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
verisim-graph = { path = "../verisim-graph" }
verisim-vector = { path = "../verisim-vector" }
verisim-tensor = { path = "../verisim-tensor" }
verisim-semantic = { path = "../verisim-semantic" }
verisim-document = { path = "../verisim-document" }
verisim-temporal = { path = "../verisim-temporal" }

serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
proptest.workspace = true
