# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "verisim-normalizer"
description = "Self-normalization engine - maintains cross-modal consistency"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
verisim-hexad = { path = "../verisim-hexad" }
verisim-drift = { path = "../verisim-drift" }

serde.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
futures.workspace = true
prometheus.workspace = true

[dev-dependencies]
proptest.workspace = true
