# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "verisim-normalizer"
description = "Self-normalization engine - maintains cross-modal consistency"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
verisim-hexad = { path = "../verisim-hexad" }
verisim-drift = { path = "../verisim-drift" }

serde.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
futures.workspace = true
prometheus.workspace = true

[dev-dependencies]
proptest.workspace = true
verisim-document = { path = "../verisim-document" }
verisim-vector = { path = "../verisim-vector" }
verisim-graph = { path = "../verisim-graph" }
verisim-semantic = { path = "../verisim-semantic" }
verisim-tensor = { path = "../verisim-tensor" }
