# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "verisim-planner"
description = "Cost-based query planner for VeriSimDB"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
