# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "verisim-semantic"
description = "Semantic modality - ontology and type system via CBOR proofs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ciborium.workspace = true
chrono.workspace = true
regex = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true

[features]
default = ["regex"]

[dev-dependencies]
proptest.workspace = true
