# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "verisim-spatial"
description = "Spatial modality - geospatial coordinates, geometry, and proximity queries"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true

[dev-dependencies]
proptest.workspace = true
