# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "verisim-storage"
description = "Pluggable storage backend abstraction for VeriSimDB"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
tokio-test = "0.4"
