# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "verisim-storage"
description = "Pluggable storage backend abstraction for VeriSimDB"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
# Enable the redb persistent backend (pure Rust, B-tree, ACID, single-file).
redb-backend = ["dep:redb"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

# Optional: redb for persistent on-disk storage (pure Rust, no C/C++)
redb = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
tokio-test = "0.4"
