# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "verisim-temporal"
description = "Temporal modality - time-series and versioning"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true

[dev-dependencies]
proptest.workspace = true
