# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "verisim-tensor"
description = "Tensor modality - multi-dimensional array operations via Burn"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
burn.workspace = true
ndarray.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true

[dev-dependencies]
proptest.workspace = true
