# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "verisim-vector"
description = "Vector modality - HNSW-based similarity search"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# hnsw_rs.workspace = true  # TODO: Re-enable when implementing proper HNSW with lifetime management
ndarray.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
bincode.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

