# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "verisim-vector"
description = "Vector modality - HNSW-based similarity search"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# HNSW integration deferred — brute-force O(n) search used. Acceptable for <10k vectors.
# hnsw_rs.workspace = true  # Deferred: lifetime management issues with hnsw_rs 0.3
ndarray.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
# bincode removed — not used in crate
# bincode.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

