# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "verisim-wal"
description = "Write-ahead log for VeriSimDB crash recovery"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
crc32fast = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3.14"
